--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "to-do-list",
+  "name": "weather-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/competitive-flamingo/to-do-list.git"
+    "url": "git+https://github.com/competitive-flamingo/weather-app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/competitive-flamingo/to-do-list/issues"
+    "url": "https://github.com/competitive-flamingo/weather-app/issues"
   },
-  "homepage": "https://github.com/competitive-flamingo/to-do-list#readme",
+  "homepage": "https://github.com/competitive-flamingo/weather-app#readme",
   "devDependencies": {
     "css-loader": "^7.1.2",
     "html-loader": "^5.1.0",
