--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/competitive-flamingo/weather-app#readme",
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.21.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "prettier": "3.5.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
